add missing library import.